--- a/bitcoincalculator-front/src/main/webapp/css/styles.css
+++ b/bitcoincalculator-front/src/main/webapp/css/styles.css
@@ -1,3 +1,9 @@
+body {
+	font-family: "Roboto", "Helvetica Neue", sans-serif;
+    	color: #757575;
+    	font-size: 13px;
+}
+
 .c05 {
 	width: 5%;
 }
