Enlace a otra pantalla

--- a/bitcoincalculator-front/src/main/webapp/WEB-INF/templates/templateHome.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/WEB-INF/templates/templateHome.xhtml
@@ -90,7 +90,7 @@
 									value="#{res['calculator.copyright']}" escape="true" />
 							</p>
 							<p:outputPanel styleClass="social">
-								<h:outputLink value="https://github.com/federicomartinlara1976">
+								<h:outputLink value="https://github.com/federicomartinlara1976" target="_blank">
 									<p:graphicImage
 										name="#{FacesContext.getCurrentInstance().getExternalContext()}/images/github-128.png"
 										width="24" />
