Script de Adsense de Google

--- a/bitcoincalculator-front/src/main/webapp/WEB-INF/templates/templateHome.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/WEB-INF/templates/templateHome.xhtml
@@ -7,6 +7,13 @@
 	<f:view locale="#{sessionBean.lang}">
 		<h:html lang="#{sessionBean.lang}">
 		<h:head>
+			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+			<script>
+  				(adsbygoogle = window.adsbygoogle || []).push({
+    					google_ad_client: "ca-pub-5308962568744638",
+    					enable_page_level_ads: true
+  				});
+			</script>
 			<title>#{appBean.name}</title>
 			<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 			<meta name="viewport"
