Adaptación de plantilla para MyFaces

--- a/bitcoincalculator-front/src/main/webapp/WEB-INF/templates/templateHome.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/WEB-INF/templates/templateHome.xhtml
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="#{sessionBean.lang}"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 	<f:view locale="#{sessionBean.lang}">
-		<h:html lang="#{sessionBean.lang}">
 		<h:head>
 			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 			<script>
@@ -110,6 +109,5 @@
 				</p:outputPanel>
 			</h:form>
 		</h:body>
-		</h:html>
 	</f:view>
-</ui:composition>
+</html>
