--- a/bitcoincalculator-front/src/main/webapp/WEB-INF/templates/templateHome.xhtml
+++ b/bitcoincalculator-front/src/main/webapp/WEB-INF/templates/templateHome.xhtml
@@ -6,7 +6,7 @@
 	xmlns:p="http://primefaces.org/ui">
 	<f:view locale="#{sessionBean.lang}">
 		<h:head>
-			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+			<script src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 			<script>
   				(adsbygoogle = window.adsbygoogle || []).push({
     					google_ad_client: "ca-pub-5308962568744638",
