--- a/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/templateHome.xhtml
+++ b/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/templateHome.xhtml
@@ -6,13 +6,8 @@
 	xmlns:p="http://primefaces.org/ui">
 	<f:view locale="#{sessionBean.lang}">
 		<h:head>
-			<script src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-			<script>
-  				(adsbygoogle = window.adsbygoogle || []).push({
-    					google_ad_client: "ca-pub-5308962568744638",
-    					enable_page_level_ads: true
-  				});
-			</script>
+			<ui:insert name="ads">Default content</ui:insert>
+			
 			<title>#{appBean.name}</title>
 			<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 			<meta name="viewport"
