Selección de idioma

--- a/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/landing.xhtml
+++ b/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/landing.xhtml
@@ -3,20 +3,29 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:chronos="http://chronos.componentes.jsf/composite"
 	xmlns:p="http://primefaces.org/ui">
-<h:head>
-	<ui:insert name="ads"></ui:insert>
+<f:view locale="#{sessionBean.lang.language}">
+	<h:head>
+		<ui:insert name="ads"></ui:insert>
 
-	<title>#{appBean.name}</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="viewport"
-		content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+		<title>#{appBean.name}</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="viewport"
+			content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
-	<h:outputStylesheet library="primefaces-AppTest" name="layout-default.css" />
-	<h:outputStylesheet library="primefaces-AppTest" name="styles.css" />
-</h:head>
+		<h:outputStylesheet library="primefaces-AppTest"
+			name="layout-default.css" />
+		<h:outputStylesheet library="primefaces-AppTest" name="styles.css" />
+	</h:head>
 
-<h:body role="document">
-	<ui:insert name="content"></ui:insert>
-</h:body>
+	<h:body role="document">
+		<f:view>
+			<h:form prependId="false">
+				<chronos:langSelector lang="#{sessionBean.lang}" flags="true" />
+				<ui:insert name="content"></ui:insert>
+			</h:form>
+		</f:view>
+	</h:body>
+</f:view>
 </html>
