--- a/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/templateHome.xhtml
+++ b/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/templateHome.xhtml
@@ -41,6 +41,9 @@
 						<ui:insert name="pageTitle">Default content</ui:insert>
 					</p:outputPanel>
 					<chronos:langSelector lang="#{sessionBean.lang}" flags="true"/>
+					<p:commandLink id="nonAjax" action="index" ajax="false">
+        				<h:outputText value="#{res['home']}" />
+    				</p:commandLink>
 				</p:panelGrid>
 
 				<p:outputPanel id="content" layout="block">
