Aplicar mejoras landing al tema

--- a/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/empty.xhtml
+++ b/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/empty.xhtml
@@ -14,15 +14,21 @@
 		<meta name="viewport"
 			content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
-		<h:outputStylesheet library="primefaces-AppTest"
+		<link rel="stylesheet"
+			href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+
+		<h:outputStylesheet library="primefaces-bitcoincalculator"
 			name="layout-default.css" />
-		<h:outputStylesheet library="primefaces-AppTest" name="styles.css" />
+		<h:outputStylesheet library="primefaces-bitcoincalculator"
+			name="styles.css" />
+
+		<script
+			src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</h:head>
 
 	<h:body role="document">
 		<f:view>
 			<h:form prependId="false">
-				<chronos:langSelector lang="#{sessionBean.lang}" flags="true" />
 				<ui:insert name="content"></ui:insert>
 			</h:form>
 		</f:view>
