Aplicar componente de anchos en porcentaje

--- a/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/empty.xhtml
+++ b/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/empty.xhtml
@@ -21,7 +21,8 @@
 			name="layout-default.css" />
 		<h:outputStylesheet library="primefaces-bitcoincalculator"
 			name="styles.css" />
-
+		<chronos:widthpercent/>
+	
 		<script
 			src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</h:head>
