--- a/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/access-denied.xhtml
+++ b/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/access-denied.xhtml
@@ -21,7 +21,7 @@
 	<p:outputPanel styleClass="exception-panel"
 		layout="block">
 		<p:outputPanel styleClass="exception-panel-content" layout="block">
-			<p:graphicImage value="#{resource['primefaces-AppTest:images/access-icon.png']}"/>
+			<p:graphicImage value="#{resource['primefaces-bitcoincalculator:images/access-icon.png']}"/>
 			<h1><h:outputText value="#{msg['denied.title']}" /></h1>
 			<ui:insert name="msg"></ui:insert>
 		</p:outputPanel>
