--- a/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/empty.xhtml
+++ b/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/empty.xhtml
@@ -30,6 +30,7 @@
 	<h:body role="document">
 		<f:view>
 			<h:form prependId="false">
+				<chronos:csrf/>
 				<ui:insert name="content"></ui:insert>
 			</h:form>
 		</f:view>
