--- a/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/error.xhtml
+++ b/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/error.xhtml
@@ -12,8 +12,8 @@
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
-	<h:outputStylesheet library="primefaces-AppTest" name="layout-default.css" />
-	<h:outputStylesheet library="primefaces-AppTest" name="styles.css" />
+	<h:outputStylesheet library="primefaces-bitcoincalculator" name="layout-default.css" />
+	<h:outputStylesheet library="primefaces-bitcoincalculator" name="styles.css" />
 </h:head>
 
 <h:body role="document" styleClass="exception-body error">
