--- a/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/error.xhtml
+++ b/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/error.xhtml
@@ -17,7 +17,7 @@
 </h:head>
 
 <h:body role="document" styleClass="exception-body error">
-
+	<h:form prependId="false">
 	<p:outputPanel styleClass="exception-panel"
 		layout="block">
 		<p:outputPanel styleClass="exception-panel-content" layout="block">
@@ -30,5 +30,6 @@
 			<ui:insert name="footer"></ui:insert>		
 		</p:outputPanel>
 	</p:outputPanel>
+	</h:form>
 </h:body>
 </html>
