--- a/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/empty.xhtml
+++ b/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/empty.xhtml
@@ -21,6 +21,8 @@
 			name="layout-default.css" />
 		<h:outputStylesheet library="primefaces-bitcoincalculator"
 			name="styles.css" />
+			
+		<ui:insert name="customCss"></ui:insert>
 		<chronos:widthpercent/>
 	
 		<script
