--- a/bitcoincalculator-front/src/main/webapp/css/styles.css
+++ b/bitcoincalculator-front/src/main/webapp/css/styles.css
@@ -7,3 +7,13 @@ body {
 .copyright {
 	clear:both;
 }
+
+.banners .ui-datagrid-content {
+	padding: 0.5em;
+}
+
+.panelBanner {
+	padding: 0.5em;
+	border-radius: 4px;
+	height: 150px;
+}
