--- a/bitcoincalculator-front/src/main/webapp/css/styles.css
+++ b/bitcoincalculator-front/src/main/webapp/css/styles.css
@@ -11,3 +11,18 @@
 	border-radius: 4px;
 	height: 150px;
 }
+
+.banner_1 {
+	text-align: center;
+	background-color: #9189fd;
+}
+
+.banner_2 {
+	text-align:center;
+	background-color: #ffbf79;
+}
+
+.banner_3 {
+	text-align:center;
+	background-color: #8dc8ff;
+}
