--- a/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/error.xhtml
+++ b/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/error.xhtml
@@ -4,32 +4,38 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
-<h:head>
-	<ui:insert name="ads"></ui:insert>
+<f:view locale="#{sessionBean.lang.language}">
+	<h:head>
+		<ui:insert name="ads"></ui:insert>
 
-	<title>#{appBean.name}</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="viewport"
-		content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+		<title>#{appBean.name}</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="viewport"
+			content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
-	<h:outputStylesheet library="primefaces-bitcoincalculator" name="layout-default.css" />
-	<h:outputStylesheet library="primefaces-bitcoincalculator" name="styles.css" />
-</h:head>
+		<h:outputStylesheet library="primefaces-bitcoincalculator"
+			name="layout-default.css" />
+		<h:outputStylesheet library="primefaces-bitcoincalculator"
+			name="styles.css" />
+	</h:head>
 
-<h:body role="document" styleClass="exception-body error">
-	<h:form prependId="false">
-	<p:outputPanel styleClass="exception-panel"
-		layout="block">
-		<p:outputPanel styleClass="exception-panel-content" layout="block">
-			<p:graphicImage value="#{resource['primefaces-bitcoincalculator:images/error-icon.png']}"/>
-			<h1><h:outputText value="#{msg['error.title']}" /></h1>
-			<ui:insert name="msg"></ui:insert>
-		</p:outputPanel>
+	<h:body role="document" styleClass="exception-body error">
+		<h:form prependId="false">
+			<p:outputPanel styleClass="exception-panel" layout="block">
+				<p:outputPanel styleClass="exception-panel-content" layout="block">
+					<p:graphicImage
+						value="#{resource['primefaces-bitcoincalculator:images/error-icon.png']}" />
+					<h1>
+						<h:outputText value="#{msg['error.title']}" />
+					</h1>
+					<ui:insert name="msg"></ui:insert>
+				</p:outputPanel>
 
-		<p:outputPanel styleClass="exception-panel-footer" layout="block">
-			<ui:insert name="footer"></ui:insert>		
-		</p:outputPanel>
-	</p:outputPanel>
-	</h:form>
-</h:body>
+				<p:outputPanel styleClass="exception-panel-footer" layout="block">
+					<ui:insert name="footer"></ui:insert>
+				</p:outputPanel>
+			</p:outputPanel>
+		</h:form>
+	</h:body>
+</f:view>
 </html>
