--- a/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/404.xhtml
+++ b/bitcoincalculator-theme/src/main/resources/META-INF/resources/layouts/404.xhtml
@@ -5,6 +5,8 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
+<h:outputScript library="primefaces" name="jquery/jquery.js" target="head"/>
+		<h:outputScript library="primefaces" name="jquery/jquery-plugins.js" target="head"/>
 	<ui:insert name="ads"></ui:insert>
 
 	<title>#{appBean.name}</title>
